# OJsubmit

./: .gitignore  CMakeLists.txt  README.md  c++headers.txt  demo.cpp  library_format_checker.cpp  main.cpp  makesource.cpp  merge_to_single.cpp  prog.cc  prog.cpp  sub.cpp  sub.h
Lib/: basic_utility.h  itertools.h  traits.h  utils.h
Lib/basic/: utility.h
Lib/datastructure/: RMQ.h  avector.h  counter.h  lazy.h  segtree.h  sparsetable.h
Lib/geometry/: geometry_3d.h  planar.h  point.h
Lib/graphs/: LCA.h
Lib/linearAlgebra/: gauss_elemination.h
Lib/poly/: fft.h  poly.h
Lib/string/: kmp.h
Lib/types/: Iterator.h  bigint.h  decimal.h  devector.h  fractions.h  integer-misc.h  integers.h  modulo-runtime.h  modulo.h  poly.h  primality.h
